day3/webflux-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webflux-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: webflux.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-webflux-service  # <- Matches your Service
                port:
                  number: 80
